@@ -1,9 +1,17 @@
 #! /bin/sh
+# $NetBSD: test-bigfile,v 1.1.1.1.32.2 2016/12/23 07:47:40 snj Exp $
 
 test="$1"	# partial4000 or partial8000
 bozohttpd="$2"
 wget="$3"
 datadir="$4"
+verbose="$5"
+
+if [ "yes" = "$verbose" ]; then
+	echo "Running test $test"
+else
+	exec 2>tmp.$test.err
+fi
 
 bozotestport=11111
 
@@ -23,5 +31,6 @@ if cmp ./bigfile ${datadir}/bigfile; then
 	exit 0
 else
 	rm -f ./bigfile
+	[ "yes" = "$verbose" ] || echo "Failed test $test: `cat tmp.$test.err`"
 	exit 1
 fi
